--- a/example/package.json
+++ b/example/package.json
@@ -17,8 +17,11 @@
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "style-loader": "^3.3.4",
     "webpack": "^5.91.0"
   }
 }
