--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
-  "name": "md-react-loader",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "md-react-component-loader",
+  "version": "1.0.3",
+  "main": "./index.js",
+  "description": "一个webpack loader，将Markdown转为React组件",
   "license": "MIT",
+  "author": "plutoLam",
   "dependencies": {
+    "front-matter": "^4.0.2",
     "marked": "^12.0.1",
-    "marked-xhtml": "^1.0.9"
-  }
+    "marked-xhtml": "^1.0.9",
+    "prismjs": "^1.29.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/plutoLam/md-react-Component-loader"
+  },
+  "keywords": [
+    "webpack",
+    "loader",
+    "webpack-loader",
+    "前端",
+    "工具",
+    "React",
+    "Markdown",
+    "效率"
+  ]
 }
