--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "md-react-component-loader": "^1.0.3",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
